--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-template-repository (1.0-1) unstable; urgency=medium
+isochron (0.9~rc4-1) unstable; urgency=medium
 
-  * Initial release
+  * Initial release (Closes: #1010396)
 
- -- Tsic404 <liuheng@deepin.org>  Sat, 28 Jan 2023 13:46:49 +0800
+ -- Vladimir Oltean <olteanv@gmail.com>  Thu, 19 May 2022 22:18:43 +0300
